# print-queue

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  .stylelintrc.json  AGENTS.md  CLAUDE.md  PRD.md  README.md  current-state.md  index.html  mise.toml  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: bump.mjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/macos-helper/: PrintQueueMacHelper.swift
src-tauri/src/: commands.rs  jobs.rs  lib.rs  macos_printing.rs  main.rs  models.rs  parser.rs  printing.rs  storage.rs  tray.rs  watcher.rs
src/components/: app-sidebar.tsx  capabilities-form.tsx  preset-form.tsx  printer-selector.tsx  theme-provider.tsx  update-checker.tsx
src/lib/: api.ts  types.ts
src/pages/: dashboard.tsx  presets.tsx  queue.tsx  settings.tsx
