[package]
name = "print-queue"
version = "0.1.10"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "print_queue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = ["tray-icon", "image-png"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
printers = "2"
notify = "8"
notify-debouncer-full = "0.7.0"
zip = "8.6.0"
image = { version = "0.25.10", default-features = false, features = [
  "jpeg",
  "png",
  "tiff",
] }
sha2 = "0.11.0"
hex = "0.4"
tauri-plugin-dialog = "2.7.0"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2.10.1"
lopdf = "0.40.0"
flate2 = "1"
